test: finish test + other
- All Services and Controllers are 100% branch covered
- Refactor error handling
- Add Request and Response model to ensure data intigrity
- move test class to correct package
- move route package out of itinerary

Co-authored-by: Francois389 <francois-sp@gmx.fr>
Co-authored-by: quentinformatique <quentin161204@gmail.com>